@@ -34,13 +34,14 @@
 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mamallan</groupId>
-    <artifactId>com.mamallan.gwtapp</artifactId>
+    <groupId>com.sapientarrow</groupId>
+    <artifactId>gwtapp</artifactId>
     <packaging>war</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
         <gwtVersion>2.6.0</gwtVersion>
+        <gwt.version>2.6.0</gwt.version>
         <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <tomcat.webport>8082</tomcat.webport>
@@ -312,12 +313,14 @@ http://maven.apache.org/maven-v4_0_0.xsd">
 			<artifactId>gwt-recaptcha</artifactId>
 			<version>1.0.0.Beta2</version>
 		</dependency>
-		
+	
+<!--	
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-dev</artifactId>
-			<version>2.4.0</version>
+			<version>2.8.2</version>
 		</dependency>
+-->
 
 		<dependency>
 			<groupId>xerces</groupId>
@@ -336,7 +339,58 @@ http://maven.apache.org/maven-v4_0_0.xsd">
 			<artifactId>serializer</artifactId>
 			<version>2.7.2</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>eclipselink</artifactId>
+			<version>2.7.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.gwtbootstrap3</groupId>
+			<artifactId>gwtbootstrap3</artifactId>
+			<version>0.9.4</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.clerezza.ext</groupId>
+			<artifactId>org.json.simple</artifactId>
+			<version>0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.fusesource.restygwt</groupId>
+			<artifactId>restygwt</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gwtx</groupId>
+			<artifactId>gwtx</artifactId>
+			<version>1.5.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.moxieapps</groupId>
+			<artifactId>gwt.highcharts</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+
+
 		
 		<!-- SPRING 4 DEPENDENCIES 
 		
@@ -359,7 +413,7 @@ Spring 4.0 Maven Dependency
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
-        <version>4.0.0.RC1</version>
+        <version>4.0.6.RELEASE</version>
     </dependency>
 </dependencies>
 <repositories>
@@ -393,9 +447,19 @@ Spring 4.0 Maven Dependency
     <build>
     
        <defaultGoal>clean compile war tomcat7:run-war-only</defaultGoal> 
-    
+    <resources>
+        <resource>
+            <directory>${basedir}/src/main/java</directory>
+        </resource>
+        <resource>
+            <directory>${basedir}/src/main/resources</directory>
+        </resource>
+    </resources>
+    <!-- **Other build tags** -->
+
         <plugins>
 
+		<!--
 		<plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <version>1.7</version>
@@ -404,7 +468,7 @@ Spring 4.0 Maven Dependency
             <phase>compile</phase>
             <configuration>
               <tasks>
-				<java failonerror="true" fork="true" classname="com.google.gwt.dev.Compiler"> 
+				<java failonerror="true" fork="false" classname="com.google.gwt.dev.Compiler"> 
 			  <classpath>
 				<pathelement location="src/main/java"/>
 
@@ -413,67 +477,82 @@ Spring 4.0 Maven Dependency
 				<pathelement location="src/main/resources"/>
 
 				
-    <pathelement location="E:\gwtapp\gwtapplication\libs/gwt-user-2.6.0.jar"/>
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwt-dev-2.6.0.jar"/>
+    <pathelement location="c:\projects\common\gwt\gwt-dev-2.7.0.jar"/>
+    <pathelement location="c:\projects\common\gwt\gwt-user-2.7.0.jar"/>
+    <pathelement location="c:\projects\common\gwt\jsinterop-annotations-1.0.2.jar"/>
+    <pathelement location="c:\projects\common\gwt\jsinterop-annotations-1.0.2-sources.jar"/>
+    <pathelement location="C:\apache-ant-1.9.9\lib\ant.jar"/>
+    <pathelement location="c:\projects\common\gwt\gwtupload-1.0.3.jar"/>
+    <pathelement location="c:\projects\common\gwt\smartgwt-2.5-patch.jar"/>
+    <pathelement location="c:\projects\common\gwt\gwtx-1.5.3.jar"/>
+    <pathelement location="c:\projects\common\gwt\restygwt-2.2.3.jar"/>
+    <pathelement location="c:\projects\common\gwt\gwt-jackson-0.15.3.jar"/>
+    <pathelement location="c:\projects\common\gwt\gwtbootstrap3-0.9.4.jar"/>
+    <pathelement location="c:\projects\common\gwt\org.moxieapps.gwt.highcharts-1.7.0.jar"/>
+    <pathelement location="c:\projects\common\gwt\gwt-recaptcha-1.0.0.Beta2.jar"/>
+    <pathelement location="c:\projects\common\gwt\colt.jar"/>
+   <pathelement location="c:\projects\common\gwt\asm-5.0.3.jar"/>
+    <pathelement location="C:\Program Files\Java\jdk1.8.0_162\jre\lib\rt.jar"/>
 
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/validation-api-1.0.0.GA.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/validation-api-1.0.0.GA-sources.jar" />
+   
 
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-aop-4.0.6.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-beans-4.0.6.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-context-4.0.6.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-context-support-4.0.6.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-core-4.0.6.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-expression-4.0.6.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-jdbc-4.0.6.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-orm-4.0.6.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-oxm-4.0.6.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-tx-4.0.6.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-web-4.0.6.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-webmvc-4.0.6.RELEASE.jar" />
-
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/slf4j-log4j12-1.0-rc1.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/recaptcha4j-0.0.8.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/org.moxieapps.gwt.highcharts-1.1.3.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/javax.mail-1.3.3.01.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/slf4j-log4j12-1.0-rc1.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/log4j-1.2.17.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/json-20090211.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/joda-time-2.9.1.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/jbcrypt-0.3m.jar" />
-
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-annotations.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-commons-annotations.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-commons-annotations-4.0.5.Final.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-core-4.3.8.Final.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-entitymanager-4.3.8.Final.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/hibernate-jpa-2.1-api-1.0.0.Final.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/json-20090211.jar" />
-
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gxt-3.0.0.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwtupload-1.0.3.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwt-sl-1.5.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwt-servlet.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwt-recaptcha-1.0.0.Beta2.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/gwt-material-1.3.3.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/ejb3-persistence.jar" />	
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/org.moxieapps.gwt.highcharts-1.1.3.jar" />
-
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/smartgwt-2.4.jar" />
 	
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-security-config-3.2.4.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-security-core-3.2.4.RELEASE.jar" />
-    <pathelement location="E:\apache-tomcat-7.0.57\webapps\mamallan.gwtapp-1.0.0\WEB-INF\lib/spring-security-web-3.2.4.RELEASE.jar" />
+    <pathelement path="C:\\projects\\gwtapp-dec2017\\gwtapplication\\src"/>
+
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/validation-api-1.0.0.GA.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/validation-api-1.0.0.GA-sources.jar" />
+
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-aop-4.0.6.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-beans-4.0.6.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-context-4.0.6.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-context-support-4.0.6.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-core-4.0.6.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-expression-4.0.6.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-jdbc-4.0.6.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-orm-4.0.6.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-oxm-4.0.6.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-tx-4.0.6.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-web-4.0.6.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib\spring-webmvc-4.0.6.RELEASE.jar" />
+
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/slf4j-log4j12-1.0-rc1.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/recaptcha4j-0.0.8.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/org.moxieapps.gwt.highcharts-1.1.3.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/javax.mail-1.3.3.01.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/slf4j-log4j12-1.0-rc1.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/log4j-1.2.17.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/json-20090211.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/joda-time-2.9.1.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/jbcrypt-0.3m.jar" />
+
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/hibernate-annotations.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/hibernate-commons-annotations.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/hibernate-commons-annotations-4.0.5.Final.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/hibernate-core-4.3.8.Final.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/hibernate-entitymanager-4.3.8.Final.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/hibernate-jpa-2.1-api-1.0.0.Final.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/json-20090211.jar" />
+
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/gxt-3.0.0.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/gwtupload-1.0.3.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/gwt-sl-1.5.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/gwt-servlet.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/gwt-recaptcha-1.0.0.Beta2.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/gwt-material-1.3.3.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/ejb3-persistence.jar" />	
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/org.moxieapps.gwt.highcharts-1.1.3.jar" />
+
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/smartgwt-2.4.jar" />
+	
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/spring-security-config-3.2.4.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/spring-security-core-3.2.4.RELEASE.jar" />
+    <pathelement location="C:\projects\gwtapp-dec2017\gwtapplication\war\WEB-INF\lib/spring-security-web-3.2.4.RELEASE.jar" />
 				
 			  </classpath>
-			  <!-- add jvmarg -Xss16M or similar if you see a StackOverflowError -->
 			  <jvmarg value="-Xmx1G"/>
 			<arg line="-logLevel DEBUG"/>
 			
-			  <!-- Additional arguments like -style DETAILED or -logLevel DEBUG -->
-			  <!-- <arg line="-optimize 0"  /> -->
-			  <!-- <arg line="-style PRETTY"/> -->
-			  <arg value="com.mamallan.gwtapp.HelloWorldGWT"/>
+			  <arg value="com.sapientarrow.gwtapp.HelloWorldGWT"/>
 			</java>
 
               </tasks>
@@ -484,11 +563,55 @@ Spring 4.0 Maven Dependency
           </execution>
         </executions>
       </plugin>
-	  
+	  -->
+	          <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>gwt-maven-plugin</artifactId>
+                <version>2.5.0</version>
+                <configuration>
+                    <logLevel>INFO</logLevel>
+                    <style>PRETTY</style>
+                    <runTarget>/HelloWorldGWT.html</runTarget>
+                    <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
+					<!--
+				 <modules>
+                        <module>${project.groupId}.${artifactId}.HelloWorldGWT.gwt.xml</module>
+                    </modules>
+		            -->
+					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+                        <extraJvmArgs>-Xmx2048m -Xmx2048m -XX:MaxPermSize=512m</extraJvmArgs>
+                    <copyWebapp>true</copyWebapp>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>gwtcompile</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.google.gwt</groupId>
+                        <artifactId>gwt-dev</artifactId>
+                        <version>${gwt.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.google.gwt</groupId>
+                        <artifactId>gwt-user</artifactId>
+                        <version>${gwt.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
 			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
+				<configuration>
+				<webXml>src\main\webapp\WEB-INF\web.xml</webXml>        
+			  </configuration>			
             </plugin>
 	
             <plugin>
